# biosphere

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_forest.rs  bench_gpu.rs  bench_tree.rs  bench_tree_serde.rs  bench_utils.rs
examples/: decision_tree_serde.rs
src/: flat_forest.rs  forest.rs  lib.rs  testing.rs  utils.rs
src/gpu/: mod.rs  pipeline.rs
src/gpu/shaders/: reduce.wgsl  traverse.wgsl
src/tree/: decision_tree.rs  decision_tree_node.rs  decision_tree_parameters.rs  mod.rs
tests/: flat_forest.rs  flat_forest_serde.rs  gpu_inference.rs
