[package]
name = "biosphere"
description = "Simple, fast random forests."
authors = ["Malte Londschien <malte@londschien.ch>"]
repository = "https://github.com/mlondschien/biosphere/"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.4.2"
edition = "2021"
exclude = ["/.github", "/changeforest-py", ".pre-commit-config.yaml", ".gitignore"]
keywords = ["machine-learning", "random-forest", "decision-tree", "ensemble", "tree"]

[lib]
name = "biosphere"

[dependencies]
ndarray = "0.17.1"
rand = "0.9"
rayon = "1.11"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[profile.bench]
incremental = true
debug = true
lto = "fat"

[dev-dependencies]
rstest = "0.26"
ndarray-rand = "0.16"
csv = "^1"
ndarray-csv = "^0.5"
criterion = "0.8"
assert_approx_eq = "1.1"
postcard = { version = "1", features = ["use-std"] }

[[bench]]
name = "bench_utils"
harness = false

[[bench]]
name = "bench_forest"
harness = false

[[bench]]
name = "bench_tree"
harness = false

[[bench]]
name = "bench_tree_serde"
harness = false
required-features = ["serde"]
